# computational_geometry

./: convexH.py
monotone/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  make_monotone  make_monotone.cpp
triangulate/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  triangulate  triangulate.cpp
triangulation/: make_monotone.py
